--- a/platformio.ini
+++ b/platformio.ini
@@ -1,15 +1,7 @@
-; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
-;
-; Please visit documentation for the other options and examples
-; http://docs.platformio.org/page/projectconf.html
-
 [platformio]
-src_dir = .
+src_dir = ./src
+default_envs = serial
+extra_configs = ./env/*
 
 [env]
 platform = espressif32
@@ -17,7 +9,12 @@ board = esp32thing
 board_build.partitions = default.csv
 framework = arduino
 monitor_speed = 115200
-#upload_speed = 900000
+upload_speed = 900000
+
+build_flags =
+  -Os
+  -DCORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
+
 lib_deps =
     DallasTemperature
     ESP-WiFiSettings
